	Turning on debug in SCons turns on maintainer mode also.
	Upload starting at zero position are now always allowed no matter if
	  source port was reused or not. Old code did that but not over
	  server restarts.
	INFO file updated with fresh information
	fsetupcmd - reject port number > 65535
	fsetupcmd - code cleaned a bit. Error message is now
	  fsetup: No host given! instead of fhost:

Version 2.8.1b25 - 10 Sep 2009
	GNU autotools build system was entirely replaced by SCons
	corrected misleading comment in client/lib.c
	default packetsize changed to do best fit into maximum 1500 mtu
	  Ethernet frame = 1460. This is needed for speedup the booting of
	  Etherboot clients
	PROTOCOL: when computing checksum declare *t as unsigned char * type
	changed typo setguid -> setgid in fspd.conf
	fspd.conf: added note that only numeric uid values works
	fspd.conf: added more information about packetsize
	fspd.1: updated information about packetsize
	fspd.conf: repaired some spelling errors by ispell
	MTU changed from 1500 to 1492 for better operation on pppOE networks
	Max payload changed from 4096 to 4380 bytes (3 packets)
	fspd: command line argument now overrides config file
	updated year in copyright
	fsetup command added to setup.sh
	fsetup command added to setup.csh
	fcd: remove trailing \r\n from readme file
	fcd: do not print empty line after directory protection
	fsetupcmd: don't crash if called with numeric address
	fspscan: commited fix by Yang Hong
	SCONS: turning on maintainer-mode links against efence (if possible)
	  same thing like ./configure do
	unbreak compilation on systems without large files
	cygwin support disabled. we cant detect it from SCons yet
	frmdir works now. It didnt worked due to adding new access rights
	  DIR_NOLIST and DIR_NOGET
	MACHINES updated. Builds confirmed on Ubuntu 8.04.3,
	  FreeBSD 6.4 and FreeBSD 7.2
	fsetupcmd added to fspmerge client
	SCons can now build SGML FSP FAQ if sgmlfmt is found during build
	  process