@@ -1,8 +1,8 @@
-.TH FSETUP 1 "Jan 2005" FSP
+.TH FSETUP 1 "Sep 2009" FSP
 .SH NAME
 fsetupcmd, fsetup \- set environment variables
 .SH SYNOPSIS
-.B fsetup [-c | -b] host port [directory] | abbreviation
+.B fsetup -l | [-c | -b] host port [directory] | abbreviation
 .SH DESCRIPTION
 .LP
 .B fsetup
@@ -28,6 +28,7 @@ searching in the resource file will be done.
 Since programs cannot change environment variables of their parent shell in
 a simple way, it is recommended that the user defines a shell alias or
 function to make it possible.
+.LP
 .B csh
 example:
 .LP
@@ -35,9 +36,18 @@ example:
 alias fsetup 'eval `fsetupcmd \!*`'
 .fi
 .SH FILES
+.LP
+~/.fspsites
+.br
+/etc/fspsites
+
 For more information about the resource file confer
 .I fspsites(5).
 .SH ARGUMENTS
+.LP
+.B -l
+-- displays sites from
+.I fspsites(5)
 .LP
 .B -b
 -- output Bourne shell code
@@ -47,11 +57,17 @@ For more information about the resource file confer
 .SH ENVIRONMENT
 .LP
 The environment variables associate this program with a FSP database and are
-set (resp. unset) if needed. See fsp_env(7) for list.
+set (resp. unset) if needed. See
+.I fsp_env(7)
+for list.
 .SH HISTORY
 .LP
-This is rewrite of classic fsetup Perl script which was used in gold
-FSP era to parse standard fspsites format used for FSP site list exchange. 
+This program is rewrite of classic fsetup Perl script which was used in gold
+FSP era to parse standard fspsites format used for FSP site list exchange.
+It was used as replacement for
+.I fsp_prof(5)
+because it is much easier to use and more suitable for exchanging
+lists of public fsp servers.
 .SH "SEE ALSO"
 .PD
 fcatcmd(1), fcdcmd(1), fgetcmd(1), fgrabcmd(1), flscmd(1), fmkdir(1),
